// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput a11yTitle snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              aria-label="Dollars"
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              type="text"
              value="$1,893,385"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput disabled snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 fAimXg sc-bdvvaa lnWPOq"
              disabled=""
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 blBRtd"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput dropContent snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa lnWPOq"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 hLEXAf"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput focusIndicator snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 dsrMSZ sc-bdvvaa hfkuDO"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput guide snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 dsrMSZ sc-bdvvaa hfkuDO"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput keepCharPositions snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput main snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput mask snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              placeholder="US phone number with country code"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput name snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              id="date-id"
              name="date-name"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput pipe snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              placeholder="K1A 0B2"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput placeholder snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              placeholder="Enter phone..."
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput placeholderChar snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput plain snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 dsrMSZ sc-bdvvaa hfkuDO"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput showMask snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              type="text"
              value="(802) 444-2131"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MaskedInput widgets snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              type="text"
              value="$10"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
